Bugfix e otimizações na visibilidade e temas

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,11 +1,4 @@
 :root {
-    /* Tema laranja, default */
-    --color1: #F5A940;
-    --color2: #F7BF5E;
-    --color3: #FAD47B;
-    --color4: #FCEA99;
-    --color5: #FFFFB6;
-    
     --trueColor:  #859D3D;
     --falseColor: #921D2F;
     
@@ -20,6 +13,7 @@
     --color3: #6EC2F7;
     --color4: #9FD7F9;
     --color5: #CFEBFC;
+    color: black;
 }
 
 .tema-verde {
@@ -28,6 +22,7 @@
     --color3: #AAEDC9;
     --color4: #D4F7E4;
     --color5: #E9FBF0;
+    color: black;
 }
 
 .tema-laranja {
@@ -36,14 +31,16 @@
     --color3: #FAD47B;
     --color4: #FCEA99;
     --color5: #FFFFB6;
+    color: black;
 }
 
 .tema-escuro {
-    --color1: #878787;
-    --color2: #949494;
-    --color3: #AEAEAE;
-    --color4: #CACACA;
-    --color5: #E4E4E4;
+    --color1: #000000;
+    --color2: #0C0C0C;
+    --color3: #191919;
+    --color4: #262626;
+    --color5: #333333;
+    color: white;
 }
 
 
@@ -150,18 +147,22 @@ a {
 
 .tema-select option[value="0"] {
     background-color: #FFFFB6;
+    color: black;
 }
 
 .tema-select option[value="1"] {
     background-color: #E9FBF0;
+    color: black;
 }
 
 .tema-select option[value="2"] {
     background-color: #CFEBFC;
+    color: black;
 }
 
 .tema-select option[value="3"] {
-    background-color: #E4E4E4;
+    background-color: #333333;
+    color: white;
 }
 
 .tema-select:hover {
@@ -250,12 +251,18 @@ a {
     text-align: center;
     color: var(--trueColor);
     font-weight: bold;
+    border-radius: var(--smooth-corners);
+    background-color: var(--color3);
+    margin: 10px;
 }
 
 .erro {
     text-align: center;
     color: var(--falseColor);
     font-weight: bold;
+    border-radius: var(--smooth-corners);
+    background-color: var(--color3);
+    margin: 10px;
 }
 
 form {
